Modify package name to publish forked package

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,9 +9,7 @@ env:
   CAKE_SETTINGS_SKIPVERIFICATION: true
 
 on:
-  push:
-    tags:
-      - "*"
+  workflow_dispatch:
 
 jobs:
   build-test-pull-request:
