--- a/src/Aspirate.Cli/Aspirate.Cli.csproj
+++ b/src/Aspirate.Cli/Aspirate.Cli.csproj
@@ -10,12 +10,13 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <PackageId>Dombrovsky.Aspirate</PackageId>
     <Title>Aspirate</Title>
     <Authors>David Sekula / Prom3theu5</Authors>
     <Description>Automatic kustomize manifest generation for applications powered by the Microsoft .Net Aspire Cloud framework.</Description>
-    <PackageProjectUrl>https://github.com/prom3theu5/aspirational-manifests</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/dombrovsky/aspirational-manifests</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/prom3theu5/aspirational-manifests.git</RepositoryUrl>
+    <RepositoryUrl>https://github.com/dombrovsky/aspirational-manifests.git</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
     <PackageTags>aspire;kubernetes;aspirate;kustomize;manifests</PackageTags>
     <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
